# balena-supervisor

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .lintstagedrc  .mochapodrc.yml  .mocharc.fast.js  .mocharc.js  .prettierrc.js  .resinci.yml  01_nodoc  CHANGELOG.md  Dockerfile  Dockerfile.alpine.amd64  Dockerfile.alpine.armhf  Dockerfile.alpine.armv7hf  Dockerfile.alpine.i386  Dockerfile.alpine.rpi  Dockerfile.amd64  Dockerfile.amd64-alpine  Dockerfile.armel  Dockerfile.armhf-alpine  Dockerfile.armv7hf  Dockerfile.build.template  Dockerfile.debug  Dockerfile.dind  Dockerfile.gosuper  Dockerfile.hotfix  Dockerfile.i386  Dockerfile.i386-alpine  Dockerfile.null  Dockerfile.rpi  Dockerfile.runtime.template  Dockerfile.template  Dockerfile.x86  Dockerfile.x86_64  Makefile  README.md  Rockerfile  (+48 more)
.circleci/: config.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  renovate.json
.versionbot/: CHANGELOG.yml
Godeps/: Godeps.json
automation/: Dockerfile  audit-collected-events.js  build.sh  deploy-to-balena-cloud.js  deploy-to-resin.js  jenkins_build.sh  lint-mocha-tests.js  package.json  pr-to-meta-resin.sh
rustsuper/: Cargo.toml  Dockerfile  do_formatting.sh  test_formatting.sh
rustsuper/src/: config.rs  lib.rs  main.rs  server.rs
rustsuper/src/api/: api.rs  endpoints.rs  handlers.rs  ids.rs  mod.rs  params.rs  utils.rs
rustsuper/src/application/: application.rs  mod.rs
rustsuper/src/device/: device.rs  mod.rs
rustsuper/src/network/: mod.rs  network.rs
rustsuper/tests/: config_for_test.json  integration_test.rs
(+884 files in other folders)
